--- a/irs-order/src/main/resources/application.yml
+++ b/irs-order/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 80
 
 logging:
   level:
@@ -8,7 +8,7 @@ logging:
 
 spring:
   application:
-    name: uaa-server
+    name: order-server
   http:
     encoding:
       enabled: true
