--- a/irs-server-authorization/pom.xml
+++ b/irs-server-authorization/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>irs-order</artifactId>
+  <artifactId>irs-server-authorization</artifactId>
 
   <dependencies>
     <dependency>
