--- a/irs-server-resource/pom.xml
+++ b/irs-server-resource/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>irs-uaa</artifactId>
+  <artifactId>irs-server-resource</artifactId>
 
   <dependencies>
     <dependency>
