--- a/api-common/pom.xml
+++ b/api-common/pom.xml
@@ -17,6 +17,10 @@
       <artifactId>hutool-all</artifactId>
       <version>5.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-security</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
