--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>2.1.2</mybatis.spring.boot.version>
     <jetbrains.annotations.version>13.0</jetbrains.annotations.version>
+    <jjwt.version>0.9.1</jjwt.version>
   </properties>
 
   <!-- 子项目共有依赖, 子项目不需要再声明, 会自动引入 -->
@@ -103,6 +104,11 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-jwt</artifactId>
         <version>1.1.0.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt</artifactId>
+        <version>${jjwt.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.security.oauth.boot</groupId>
