--- a/irs-server-authorization/src/main/resources/application.yml
+++ b/irs-server-authorization/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
       force: true
   resources:
     static-locations: classpath:/static/
+
+jwt:
+  jwt-secret-key: C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjWnZr4u7w
